feat: Enable in-browser JSX/TSX compilation
Integrates Babel Standalone script into index.html to allow for in-browser compilation of JSX and TSX. This simplifies development and testing by removing the need for a separate build step for these specific file types. The script tag for index.tsx has been updated to `text/babel` and `data-type="module"` to leverage this new functionality.

--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@
   }
 }
 </script>
+<!-- Add Babel Standalone for in-browser JSX/TSX compilation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Change script type to "text/babel" to be processed by Babel -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
 </body>
 </html>
